// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stat Items loading it renders loading icons 1`] = `
<Component
  fields={
    Array [
      Object {
        "color": "#000000",
        "description": "NETWORK_EVENTS",
        "key": "networkEvents",
        "value": null,
      },
    ]
  }
  isLoading={true}
/>
`;

exports[`Stat Items rendering kpis with charts it renders the default widget 1`] = `
<pure(Component)
  areaChart={
    Array [
      Object {
        "color": "#DB1374",
        "key": "uniqueSourceIpsHistogram",
        "value": Array [
          Object {
            "x": 1556686800000,
            "y": 580213,
          },
          Object {
            "x": 1556730000000,
            "y": 1096175,
          },
          Object {
            "x": 1556773200000,
            "y": 12382,
          },
        ],
      },
      Object {
        "color": "#490092",
        "key": "uniqueDestinationIpsHistogram",
        "value": Array [
          Object {
            "x": 1556686800000,
            "y": 565975,
          },
          Object {
            "x": 1556730000000,
            "y": 1084366,
          },
          Object {
            "x": 1556773200000,
            "y": 12280,
          },
        ],
      },
    ]
  }
  barChart={
    Array [
      Object {
        "color": "#DB1374",
        "key": "uniqueSourceIps",
        "value": Array [
          Object {
            "x": 1714,
            "y": "uniqueSourceIps",
          },
        ],
      },
      Object {
        "color": "#490092",
        "key": "uniqueDestinationIps",
        "value": Array [
          Object {
            "x": 2354,
            "y": "uniqueDestinationIps",
          },
        ],
      },
    ]
  }
  description="UNIQUE_PRIVATE_IPS"
  fields={
    Array [
      Object {
        "color": "#DB1374",
        "description": "Source",
        "key": "uniqueSourceIps",
        "value": 1714,
      },
      Object {
        "color": "#490092",
        "description": "Dest.",
        "key": "uniqueDestinationIps",
        "value": 2359,
      },
    ]
  }
  isLoading={false}
>
  <Component
    areaChart={
      Array [
        Object {
          "color": "#DB1374",
          "key": "uniqueSourceIpsHistogram",
          "value": Array [
            Object {
              "x": 1556686800000,
              "y": 580213,
            },
            Object {
              "x": 1556730000000,
              "y": 1096175,
            },
            Object {
              "x": 1556773200000,
              "y": 12382,
            },
          ],
        },
        Object {
          "color": "#490092",
          "key": "uniqueDestinationIpsHistogram",
          "value": Array [
            Object {
              "x": 1556686800000,
              "y": 565975,
            },
            Object {
              "x": 1556730000000,
              "y": 1084366,
            },
            Object {
              "x": 1556773200000,
              "y": 12280,
            },
          ],
        },
      ]
    }
    barChart={
      Array [
        Object {
          "color": "#DB1374",
          "key": "uniqueSourceIps",
          "value": Array [
            Object {
              "x": 1714,
              "y": "uniqueSourceIps",
            },
          ],
        },
        Object {
          "color": "#490092",
          "key": "uniqueDestinationIps",
          "value": Array [
            Object {
              "x": 2354,
              "y": "uniqueDestinationIps",
            },
          ],
        },
      ]
    }
    description="UNIQUE_PRIVATE_IPS"
    fields={
      Array [
        Object {
          "color": "#DB1374",
          "description": "Source",
          "key": "uniqueSourceIps",
          "value": 1714,
        },
        Object {
          "color": "#490092",
          "description": "Dest.",
          "key": "uniqueDestinationIps",
          "value": 2359,
        },
      ]
    }
    isLoading={false}
  >
    <EuiFlexItem>
      <div
        className="euiFlexItem"
      >
        <EuiPanel
          grow={true}
          hasShadow={false}
          paddingSize="m"
        >
          <div
            className="euiPanel euiPanel--paddingMedium"
          >
            <EuiStat
              description={
                <EuiTitle
                  size="xxs"
                >
                  <span>
                    UNIQUE_PRIVATE_IPS
                  </span>
                </EuiTitle>
              }
              reverse={false}
              textAlign="left"
              title={
                <EuiFlexGroup
                  component="span"
                  gutterSize="none"
                  justifyContent="spaceBetween"
                >
                  <EuiFlexItem
                    component="span"
                  >
                    <EuiFlexGroup
                      alignItems="center"
                      component="span"
                      data-test-subj="stat-title"
                      gutterSize="m"
                      justifyContent="spaceBetween"
                    >
                      <EuiFlexItem
                        component="span"
                        grow={2}
                      >
                        <EuiFlexGroup
                          alignItems="center"
                          component="span"
                          gutterSize="m"
                        >
                          <EuiFlexItem
                            component="span"
                          >
                            <EuiIcon
                              color="#DB1374"
                              size="xl"
                              type="stopFilled"
                            />
                          </EuiFlexItem>
                          <EuiFlexItem
                            component="span"
                          >
                            <pure(Component)
                              isLoading={false}
                              value={1714}
                            />
                          </EuiFlexItem>
                        </EuiFlexGroup>
                      </EuiFlexItem>
                      <EuiFlexItem
                        component="span"
                        grow={4}
                      >
                        Source
                      </EuiFlexItem>
                    </EuiFlexGroup>
                  </EuiFlexItem>
                  <EuiFlexItem
                    component="span"
                  >
                    <EuiFlexGroup
                      alignItems="center"
                      component="span"
                      data-test-subj="stat-title"
                      gutterSize="m"
                      justifyContent="spaceBetween"
                    >
                      <EuiFlexItem
                        component="span"
                        grow={2}
                      >
                        <EuiFlexGroup
                          alignItems="center"
                          component="span"
                          gutterSize="m"
                        >
                          <EuiFlexItem
                            component="span"
                          >
                            <EuiIcon
                              color="#490092"
                              size="xl"
                              type="stopFilled"
                            />
                          </EuiFlexItem>
                          <EuiFlexItem
                            component="span"
                          >
                            <pure(Component)
                              isLoading={false}
                              value={2359}
                            />
                          </EuiFlexItem>
                        </EuiFlexGroup>
                      </EuiFlexItem>
                      <EuiFlexItem
                        component="span"
                        grow={4}
                      >
                        Dest.
                      </EuiFlexItem>
                    </EuiFlexGroup>
                  </EuiFlexItem>
                </EuiFlexGroup>
              }
              titleColor="default"
              titleSize="m"
            >
              <div
                className="euiStat euiStat--leftAligned"
              >
                <EuiText
                  className="euiStat__description"
                  size="s"
                >
                  <div
                    className="euiText euiText--small euiStat__description"
                  >
                    <p>
                      <EuiTitle
                        size="xxs"
                      >
                        <span
                          className="euiTitle euiTitle--xxsmall"
                        >
                          UNIQUE_PRIVATE_IPS
                        </span>
                      </EuiTitle>
                    </p>
                  </div>
                </EuiText>
                <EuiTitle
                  className="euiStat__title"
                  size="m"
                >
                  <p
                    className="euiTitle euiTitle--medium euiStat__title"
                  >
                    <EuiFlexGroup
                      component="span"
                      gutterSize="none"
                      justifyContent="spaceBetween"
                    >
                      <span
                        className="euiFlexGroup euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
                      >
                        <EuiFlexItem
                          component="span"
                          key="stat-items-field-uniqueSourceIps"
                        >
                          <span
                            className="euiFlexItem"
                          >
                            <EuiFlexGroup
                              alignItems="center"
                              component="span"
                              data-test-subj="stat-title"
                              gutterSize="m"
                              justifyContent="spaceBetween"
                            >
                              <span
                                className="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
                                data-test-subj="stat-title"
                              >
                                <EuiFlexItem
                                  component="span"
                                  grow={2}
                                >
                                  <span
                                    className="euiFlexItem euiFlexItem--flexGrow2"
                                  >
                                    <EuiFlexGroup
                                      alignItems="center"
                                      component="span"
                                      gutterSize="m"
                                    >
                                      <span
                                        className="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
                                      >
                                        <EuiFlexItem
                                          component="span"
                                        >
                                          <span
                                            className="euiFlexItem"
                                          >
                                            <EuiIcon
                                              color="#DB1374"
                                              size="xl"
                                              type="stopFilled"
                                            >
                                              <stopFilled
                                                className="euiIcon euiIcon--xLarge"
                                                focusable="false"
                                                height="16"
                                                style={
                                                  Object {
                                                    "fill": "#DB1374",
                                                  }
                                                }
                                                viewBox="0 0 16 16"
                                                width="16"
                                                xmlns="http://www.w3.org/2000/svg"
                                              >
                                                <svg
                                                  className="euiIcon euiIcon--xLarge"
                                                  focusable="false"
                                                  height="16"
                                                  style={
                                                    Object {
                                                      "fill": "#DB1374",
                                                    }
                                                  }
                                                  viewBox="0 0 16 16"
                                                  width="16"
                                                  xmlns="http://www.w3.org/2000/svg"
                                                >
                                                  <rect
                                                    fillRule="evenodd"
                                                    height="12"
                                                    rx="2"
                                                    width="12"
                                                    x="2"
                                                    y="2"
                                                  />
                                                </svg>
                                              </stopFilled>
                                            </EuiIcon>
                                          </span>
                                        </EuiFlexItem>
                                        <EuiFlexItem
                                          component="span"
                                        >
                                          <span
                                            className="euiFlexItem"
                                          >
                                            <pure(Component)
                                              isLoading={false}
                                              value={1714}
                                            >
                                              <Component
                                                isLoading={false}
                                                value={1714}
                                              >
                                                <span>
                                                  1,714
                                                </span>
                                              </Component>
                                            </pure(Component)>
                                          </span>
                                        </EuiFlexItem>
                                      </span>
                                    </EuiFlexGroup>
                                  </span>
                                </EuiFlexItem>
                                <EuiFlexItem
                                  component="span"
                                  grow={4}
                                >
                                  <span
                                    className="euiFlexItem euiFlexItem--flexGrow4"
                                  >
                                    Source
                                  </span>
                                </EuiFlexItem>
                              </span>
                            </EuiFlexGroup>
                          </span>
                        </EuiFlexItem>
                        <EuiFlexItem
                          component="span"
                          key="stat-items-field-uniqueDestinationIps"
                        >
                          <span
                            className="euiFlexItem"
                          >
                            <EuiFlexGroup
                              alignItems="center"
                              component="span"
                              data-test-subj="stat-title"
                              gutterSize="m"
                              justifyContent="spaceBetween"
                            >
                              <span
                                className="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
                                data-test-subj="stat-title"
                              >
                                <EuiFlexItem
                                  component="span"
                                  grow={2}
                                >
                                  <span
                                    className="euiFlexItem euiFlexItem--flexGrow2"
                                  >
                                    <EuiFlexGroup
                                      alignItems="center"
                                      component="span"
                                      gutterSize="m"
                                    >
                                      <span
                                        className="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
                                      >
                                        <EuiFlexItem
                                          component="span"
                                        >
                                          <span
                                            className="euiFlexItem"
                                          >
                                            <EuiIcon
                                              color="#490092"
                                              size="xl"
                                              type="stopFilled"
                                            >
                                              <stopFilled
                                                className="euiIcon euiIcon--xLarge"
                                                focusable="false"
                                                height="16"
                                                style={
                                                  Object {
                                                    "fill": "#490092",
                                                  }
                                                }
                                                viewBox="0 0 16 16"
                                                width="16"
                                                xmlns="http://www.w3.org/2000/svg"
                                              >
                                                <svg
                                                  className="euiIcon euiIcon--xLarge"
                                                  focusable="false"
                                                  height="16"
                                                  style={
                                                    Object {
                                                      "fill": "#490092",
                                                    }
                                                  }
                                                  viewBox="0 0 16 16"
                                                  width="16"
                                                  xmlns="http://www.w3.org/2000/svg"
                                                >
                                                  <rect
                                                    fillRule="evenodd"
                                                    height="12"
                                                    rx="2"
                                                    width="12"
                                                    x="2"
                                                    y="2"
                                                  />
                                                </svg>
                                              </stopFilled>
                                            </EuiIcon>
                                          </span>
                                        </EuiFlexItem>
                                        <EuiFlexItem
                                          component="span"
                                        >
                                          <span
                                            className="euiFlexItem"
                                          >
                                            <pure(Component)
                                              isLoading={false}
                                              value={2359}
                                            >
                                              <Component
                                                isLoading={false}
                                                value={2359}
                                              >
                                                <span>
                                                  2,359
                                                </span>
                                              </Component>
                                            </pure(Component)>
                                          </span>
                                        </EuiFlexItem>
                                      </span>
                                    </EuiFlexGroup>
                                  </span>
                                </EuiFlexItem>
                                <EuiFlexItem
                                  component="span"
                                  grow={4}
                                >
                                  <span
                                    className="euiFlexItem euiFlexItem--flexGrow4"
                                  >
                                    Dest.
                                  </span>
                                </EuiFlexItem>
                              </span>
                            </EuiFlexGroup>
                          </span>
                        </EuiFlexItem>
                      </span>
                    </EuiFlexGroup>
                  </p>
                </EuiTitle>
              </div>
            </EuiStat>
            <EuiHorizontalRule>
              <hr
                className="euiHorizontalRule euiHorizontalRule--full euiHorizontalRule--marginLarge"
              />
            </EuiHorizontalRule>
            <EuiFlexGroup
              gutterSize="none"
            >
              <div
                className="euiFlexGroup euiFlexGroup--directionRow euiFlexGroup--responsive"
              >
                <EuiFlexItem
                  grow={5}
                >
                  <div
                    className="euiFlexItem euiFlexItem--flexGrow5"
                  >
                    <pure(Component)
                      barChart={
                        Array [
                          Object {
                            "color": "#DB1374",
                            "key": "uniqueSourceIps",
                            "value": Array [
                              Object {
                                "x": 1714,
                                "y": "uniqueSourceIps",
                              },
                            ],
                          },
                          Object {
                            "color": "#490092",
                            "key": "uniqueDestinationIps",
                            "value": Array [
                              Object {
                                "x": 2354,
                                "y": "uniqueDestinationIps",
                              },
                            ],
                          },
                        ]
                      }
                    >
                      <Component
                        barChart={
                          Array [
                            Object {
                              "color": "#DB1374",
                              "key": "uniqueSourceIps",
                              "value": Array [
                                Object {
                                  "x": 1714,
                                  "y": "uniqueSourceIps",
                                },
                              ],
                            },
                            Object {
                              "color": "#490092",
                              "key": "uniqueDestinationIps",
                              "value": Array [
                                Object {
                                  "x": 2354,
                                  "y": "uniqueDestinationIps",
                                },
                              ],
                            },
                          ]
                        }
                      >
                        <AutoSizer
                          content={true}
                          detectAnyWindowResize={false}
                        >
                          <styled.div
                            data-test-subj="wrapped-by-auto-sizer"
                            innerRef={[Function]}
                          >
                            <div
                              className="sc-bxivhb fLNTGm"
                              data-test-subj="wrapped-by-auto-sizer"
                            >
                              <pure(Component)
                                data={
                                  Array [
                                    Object {
                                      "color": "#DB1374",
                                      "key": "uniqueSourceIps",
                                      "value": Array [
                                        Object {
                                          "x": 1714,
                                          "y": "uniqueSourceIps",
                                        },
                                      ],
                                    },
                                    Object {
                                      "color": "#490092",
                                      "key": "uniqueDestinationIps",
                                      "value": Array [
                                        Object {
                                          "x": 2354,
                                          "y": "uniqueDestinationIps",
                                        },
                                      ],
                                    },
                                  ]
                                }
                              >
                                <Component
                                  data={
                                    Array [
                                      Object {
                                        "color": "#DB1374",
                                        "key": "uniqueSourceIps",
                                        "value": Array [
                                          Object {
                                            "x": 1714,
                                            "y": "uniqueSourceIps",
                                          },
                                        ],
                                      },
                                      Object {
                                        "color": "#490092",
                                        "key": "uniqueDestinationIps",
                                        "value": Array [
                                          Object {
                                            "x": 2354,
                                            "y": "uniqueDestinationIps",
                                          },
                                        ],
                                      },
                                    ]
                                  }
                                />
                              </pure(Component)>
                              <styled.div>
                                <div
                                  className="sc-ifAKCX kHhUkS"
                                />
                              </styled.div>
                            </div>
                          </styled.div>
                        </AutoSizer>
                      </Component>
                    </pure(Component)>
                  </div>
                </EuiFlexItem>
                <EuiFlexItem
                  grow={5}
                >
                  <div
                    className="euiFlexItem euiFlexItem--flexGrow5"
                  >
                    <pure(Component)
                      areaChart={
                        Array [
                          Object {
                            "color": "#DB1374",
                            "key": "uniqueSourceIpsHistogram",
                            "value": Array [
                              Object {
                                "x": 1556686800000,
                                "y": 580213,
                              },
                              Object {
                                "x": 1556730000000,
                                "y": 1096175,
                              },
                              Object {
                                "x": 1556773200000,
                                "y": 12382,
                              },
                            ],
                          },
                          Object {
                            "color": "#490092",
                            "key": "uniqueDestinationIpsHistogram",
                            "value": Array [
                              Object {
                                "x": 1556686800000,
                                "y": 565975,
                              },
                              Object {
                                "x": 1556730000000,
                                "y": 1084366,
                              },
                              Object {
                                "x": 1556773200000,
                                "y": 12280,
                              },
                            ],
                          },
                        ]
                      }
                    >
                      <Component
                        areaChart={
                          Array [
                            Object {
                              "color": "#DB1374",
                              "key": "uniqueSourceIpsHistogram",
                              "value": Array [
                                Object {
                                  "x": 1556686800000,
                                  "y": 580213,
                                },
                                Object {
                                  "x": 1556730000000,
                                  "y": 1096175,
                                },
                                Object {
                                  "x": 1556773200000,
                                  "y": 12382,
                                },
                              ],
                            },
                            Object {
                              "color": "#490092",
                              "key": "uniqueDestinationIpsHistogram",
                              "value": Array [
                                Object {
                                  "x": 1556686800000,
                                  "y": 565975,
                                },
                                Object {
                                  "x": 1556730000000,
                                  "y": 1084366,
                                },
                                Object {
                                  "x": 1556773200000,
                                  "y": 12280,
                                },
                              ],
                            },
                          ]
                        }
                      >
                        <AutoSizer
                          content={true}
                          detectAnyWindowResize={false}
                        >
                          <styled.div
                            data-test-subj="wrapped-by-auto-sizer"
                            innerRef={[Function]}
                          >
                            <div
                              className="sc-bxivhb fLNTGm"
                              data-test-subj="wrapped-by-auto-sizer"
                            >
                              <pure(Component)
                                data={
                                  Array [
                                    Object {
                                      "color": "#DB1374",
                                      "key": "uniqueSourceIpsHistogram",
                                      "value": Array [
                                        Object {
                                          "x": 1556686800000,
                                          "y": 580213,
                                        },
                                        Object {
                                          "x": 1556730000000,
                                          "y": 1096175,
                                        },
                                        Object {
                                          "x": 1556773200000,
                                          "y": 12382,
                                        },
                                      ],
                                    },
                                    Object {
                                      "color": "#490092",
                                      "key": "uniqueDestinationIpsHistogram",
                                      "value": Array [
                                        Object {
                                          "x": 1556686800000,
                                          "y": 565975,
                                        },
                                        Object {
                                          "x": 1556730000000,
                                          "y": 1084366,
                                        },
                                        Object {
                                          "x": 1556773200000,
                                          "y": 12280,
                                        },
                                      ],
                                    },
                                  ]
                                }
                              >
                                <Component
                                  data={
                                    Array [
                                      Object {
                                        "color": "#DB1374",
                                        "key": "uniqueSourceIpsHistogram",
                                        "value": Array [
                                          Object {
                                            "x": 1556686800000,
                                            "y": 580213,
                                          },
                                          Object {
                                            "x": 1556730000000,
                                            "y": 1096175,
                                          },
                                          Object {
                                            "x": 1556773200000,
                                            "y": 12382,
                                          },
                                        ],
                                      },
                                      Object {
                                        "color": "#490092",
                                        "key": "uniqueDestinationIpsHistogram",
                                        "value": Array [
                                          Object {
                                            "x": 1556686800000,
                                            "y": 565975,
                                          },
                                          Object {
                                            "x": 1556730000000,
                                            "y": 1084366,
                                          },
                                          Object {
                                            "x": 1556773200000,
                                            "y": 12280,
                                          },
                                        ],
                                      },
                                    ]
                                  }
                                />
                              </pure(Component)>
                              <styled.div>
                                <div
                                  className="sc-ifAKCX kHhUkS"
                                />
                              </styled.div>
                            </div>
                          </styled.div>
                        </AutoSizer>
                      </Component>
                    </pure(Component)>
                  </div>
                </EuiFlexItem>
              </div>
            </EuiFlexGroup>
          </div>
        </EuiPanel>
      </div>
    </EuiFlexItem>
  </Component>
</pure(Component)>
`;

exports[`Stat Items rendering kpis without charts it renders the default widget 1`] = `
<pure(Component)
  description="HOSTS"
  fields={
    Array [
      Object {
        "color": "#3185FC",
        "key": "hosts",
        "value": null,
      },
    ]
  }
  isLoading={false}
>
  <Component
    description="HOSTS"
    fields={
      Array [
        Object {
          "color": "#3185FC",
          "key": "hosts",
          "value": null,
        },
      ]
    }
    isLoading={false}
  >
    <EuiFlexItem>
      <div
        className="euiFlexItem"
      >
        <EuiPanel
          grow={true}
          hasShadow={false}
          paddingSize="m"
        >
          <div
            className="euiPanel euiPanel--paddingMedium"
          >
            <EuiStat
              description={
                <EuiTitle
                  size="xxs"
                >
                  <span>
                    HOSTS
                  </span>
                </EuiTitle>
              }
              reverse={false}
              textAlign="left"
              title={
                <EuiFlexGroup
                  component="span"
                  gutterSize="none"
                  justifyContent="spaceBetween"
                >
                  <EuiFlexItem
                    component="span"
                  >
                    <EuiFlexGroup
                      alignItems="center"
                      component="span"
                      data-test-subj="stat-title"
                      gutterSize="m"
                      justifyContent="spaceBetween"
                    >
                      <EuiFlexItem
                        component="span"
                        grow={2}
                      >
                        <EuiFlexGroup
                          alignItems="center"
                          component="span"
                          gutterSize="m"
                        >
                          <EuiFlexItem
                            component="span"
                          >
                            <pure(Component)
                              isLoading={false}
                              value={null}
                            />
                          </EuiFlexItem>
                        </EuiFlexGroup>
                      </EuiFlexItem>
                      <EuiFlexItem
                        component="span"
                        grow={4}
                      />
                    </EuiFlexGroup>
                  </EuiFlexItem>
                </EuiFlexGroup>
              }
              titleColor="default"
              titleSize="m"
            >
              <div
                className="euiStat euiStat--leftAligned"
              >
                <EuiText
                  className="euiStat__description"
                  size="s"
                >
                  <div
                    className="euiText euiText--small euiStat__description"
                  >
                    <p>
                      <EuiTitle
                        size="xxs"
                      >
                        <span
                          className="euiTitle euiTitle--xxsmall"
                        >
                          HOSTS
                        </span>
                      </EuiTitle>
                    </p>
                  </div>
                </EuiText>
                <EuiTitle
                  className="euiStat__title"
                  size="m"
                >
                  <p
                    className="euiTitle euiTitle--medium euiStat__title"
                  >
                    <EuiFlexGroup
                      component="span"
                      gutterSize="none"
                      justifyContent="spaceBetween"
                    >
                      <span
                        className="euiFlexGroup euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
                      >
                        <EuiFlexItem
                          component="span"
                          key="stat-items-field-hosts"
                        >
                          <span
                            className="euiFlexItem"
                          >
                            <EuiFlexGroup
                              alignItems="center"
                              component="span"
                              data-test-subj="stat-title"
                              gutterSize="m"
                              justifyContent="spaceBetween"
                            >
                              <span
                                className="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
                                data-test-subj="stat-title"
                              >
                                <EuiFlexItem
                                  component="span"
                                  grow={2}
                                >
                                  <span
                                    className="euiFlexItem euiFlexItem--flexGrow2"
                                  >
                                    <EuiFlexGroup
                                      alignItems="center"
                                      component="span"
                                      gutterSize="m"
                                    >
                                      <span
                                        className="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
                                      >
                                        <EuiFlexItem
                                          component="span"
                                        >
                                          <span
                                            className="euiFlexItem"
                                          >
                                            <pure(Component)
                                              isLoading={false}
                                              value={null}
                                            >
                                              <Component
                                                isLoading={false}
                                                value={null}
                                              >
                                                <span>
                                                  --
                                                </span>
                                              </Component>
                                            </pure(Component)>
                                          </span>
                                        </EuiFlexItem>
                                      </span>
                                    </EuiFlexGroup>
                                  </span>
                                </EuiFlexItem>
                                <EuiFlexItem
                                  component="span"
                                  grow={4}
                                >
                                  <span
                                    className="euiFlexItem euiFlexItem--flexGrow4"
                                  />
                                </EuiFlexItem>
                              </span>
                            </EuiFlexGroup>
                          </span>
                        </EuiFlexItem>
                      </span>
                    </EuiFlexGroup>
                  </p>
                </EuiTitle>
              </div>
            </EuiStat>
            <EuiFlexGroup
              gutterSize="none"
            >
              <div
                className="euiFlexGroup euiFlexGroup--directionRow euiFlexGroup--responsive"
              />
            </EuiFlexGroup>
          </div>
        </EuiPanel>
      </div>
    </EuiFlexItem>
  </Component>
</pure(Component)>
`;

exports[`Stat Items rendering kpis without charts it renders the default widget 2`] = `
<pure(Component)
  areaChart={Array []}
  barChart={Array []}
  description="HOSTS"
  fields={
    Array [
      Object {
        "color": "#3185FC",
        "key": "hosts",
        "value": null,
      },
    ]
  }
  isLoading={false}
>
  <Component
    areaChart={Array []}
    barChart={Array []}
    description="HOSTS"
    fields={
      Array [
        Object {
          "color": "#3185FC",
          "key": "hosts",
          "value": null,
        },
      ]
    }
    isLoading={false}
  >
    <EuiFlexItem>
      <div
        className="euiFlexItem"
      >
        <EuiPanel
          grow={true}
          hasShadow={false}
          paddingSize="m"
        >
          <div
            className="euiPanel euiPanel--paddingMedium"
          >
            <EuiStat
              description={
                <EuiTitle
                  size="xxs"
                >
                  <span>
                    HOSTS
                  </span>
                </EuiTitle>
              }
              reverse={false}
              textAlign="left"
              title={
                <EuiFlexGroup
                  component="span"
                  gutterSize="none"
                  justifyContent="spaceBetween"
                >
                  <EuiFlexItem
                    component="span"
                  >
                    <EuiFlexGroup
                      alignItems="center"
                      component="span"
                      data-test-subj="stat-title"
                      gutterSize="m"
                      justifyContent="spaceBetween"
                    >
                      <EuiFlexItem
                        component="span"
                        grow={2}
                      >
                        <EuiFlexGroup
                          alignItems="center"
                          component="span"
                          gutterSize="m"
                        >
                          <EuiFlexItem
                            component="span"
                          >
                            <pure(Component)
                              isLoading={false}
                              value={null}
                            />
                          </EuiFlexItem>
                        </EuiFlexGroup>
                      </EuiFlexItem>
                      <EuiFlexItem
                        component="span"
                        grow={4}
                      />
                    </EuiFlexGroup>
                  </EuiFlexItem>
                </EuiFlexGroup>
              }
              titleColor="default"
              titleSize="m"
            >
              <div
                className="euiStat euiStat--leftAligned"
              >
                <EuiText
                  className="euiStat__description"
                  size="s"
                >
                  <div
                    className="euiText euiText--small euiStat__description"
                  >
                    <p>
                      <EuiTitle
                        size="xxs"
                      >
                        <span
                          className="euiTitle euiTitle--xxsmall"
                        >
                          HOSTS
                        </span>
                      </EuiTitle>
                    </p>
                  </div>
                </EuiText>
                <EuiTitle
                  className="euiStat__title"
                  size="m"
                >
                  <p
                    className="euiTitle euiTitle--medium euiStat__title"
                  >
                    <EuiFlexGroup
                      component="span"
                      gutterSize="none"
                      justifyContent="spaceBetween"
                    >
                      <span
                        className="euiFlexGroup euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
                      >
                        <EuiFlexItem
                          component="span"
                          key="stat-items-field-hosts"
                        >
                          <span
                            className="euiFlexItem"
                          >
                            <EuiFlexGroup
                              alignItems="center"
                              component="span"
                              data-test-subj="stat-title"
                              gutterSize="m"
                              justifyContent="spaceBetween"
                            >
                              <span
                                className="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
                                data-test-subj="stat-title"
                              >
                                <EuiFlexItem
                                  component="span"
                                  grow={2}
                                >
                                  <span
                                    className="euiFlexItem euiFlexItem--flexGrow2"
                                  >
                                    <EuiFlexGroup
                                      alignItems="center"
                                      component="span"
                                      gutterSize="m"
                                    >
                                      <span
                                        className="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
                                      >
                                        <EuiFlexItem
                                          component="span"
                                        >
                                          <span
                                            className="euiFlexItem"
                                          >
                                            <pure(Component)
                                              isLoading={false}
                                              value={null}
                                            >
                                              <Component
                                                isLoading={false}
                                                value={null}
                                              >
                                                <span>
                                                  --
                                                </span>
                                              </Component>
                                            </pure(Component)>
                                          </span>
                                        </EuiFlexItem>
                                      </span>
                                    </EuiFlexGroup>
                                  </span>
                                </EuiFlexItem>
                                <EuiFlexItem
                                  component="span"
                                  grow={4}
                                >
                                  <span
                                    className="euiFlexItem euiFlexItem--flexGrow4"
                                  />
                                </EuiFlexItem>
                              </span>
                            </EuiFlexGroup>
                          </span>
                        </EuiFlexItem>
                      </span>
                    </EuiFlexGroup>
                  </p>
                </EuiTitle>
              </div>
            </EuiStat>
            <EuiFlexGroup
              gutterSize="none"
            >
              <div
                className="euiFlexGroup euiFlexGroup--directionRow euiFlexGroup--responsive"
              >
                <EuiFlexItem
                  grow={10}
                >
                  <div
                    className="euiFlexItem euiFlexItem--flexGrow10"
                  />
                </EuiFlexItem>
                <EuiFlexItem
                  grow={10}
                >
                  <div
                    className="euiFlexItem euiFlexItem--flexGrow10"
                  />
                </EuiFlexItem>
              </div>
            </EuiFlexGroup>
          </div>
        </EuiPanel>
      </div>
    </EuiFlexItem>
  </Component>
</pure(Component)>
`;
